0.4.9
 - build: setup.py test is deprecated
 - build: moved from travisCI to GitHub Actions
 - docs: refurbish docs
 - tests: allow 2D Fourier mapping test to fail on macOS
   (don't know why it fails)
0.4.8
 - ref: move sinogram generation in tests to separate file, thanks @SZanko
 - ref: deprecation warning int for numpy 1.20.0, thanks @SZanko
 - ref: more type hints, thanks @SZanko
0.4.7
 - ref: added PEP 484 type hints, thanks @SZanko (#3)
0.4.6
 - maintenance release
0.4.5
 - setup: bump scipy to 1.4.0 (updated QHull in griddata)
0.4.4
 - fix: correctly increment `count` in `_alg_fmp.py`
0.4.3
 - fix: correctly compute `max_count` for 3D wrapper
0.4.2
 - fix: use `Value.get_lock()` when tracking progress
 - docs: minor improvements
0.4.1
 - docs: add index link and include changelog
0.4.0
 - BREAKING CHANGE: volumetric reconstruction is now done according to
   the ODTbrain indexing convention. To get the original behavior,
   transpose the output, i.e. ``volout.transpose(1, 0, 2)``.
0.3.2
 - ci: automated deployment with travis-ci
0.3.1
 - Convenience fix: Make algorithm source files private
0.3.0
 - BREAKING CHANGES:
   - Renamed several functions
   - Dropped support for Python 2
 - Refactoring:
   - Moved each reconstruction algorithm to a separate file
   - Modified code to comply with PEP8
   - Moved long doc strings from source to docs directory
   - Removed complicated and redundant 3D reconstruction methods
   - Improved 3D algorithm (`threed.py`) to support progress-monitoring
0.2.1
 - Do not include compiled docs in sdist
0.2.0
 - Updated docs and examples (#1)
 - Moved docs to readthedocs.io
0.1.9
 - No code changes
0.1.8
 - Added support for NumPy 1.10
0.1.7
 - Improved padding for backprojection
0.1.6
 - Removed a memory leak
 - Increase compatibility to jobmanager
 - Improved documentation
0.1.5
 - Fixed an example
 - Fixed bug in 3D reconstruction
0.1.4
 - Added 3D reconstruction methods
0.1.3